[package]
name = "schema-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-client = { path="../../client" }
schemars = "0.8.12"
serde_json = { version = "1.0.93", default-features = false }
